<resources>
    <string name="app_name">Spring23E1App</string>
    <string name="uni_title">University of Central Punjab</string>
    <string name="cs_dept">CS Dept</string>
    <string name="se_dept">SE Dept</string>
    <string name="adp_dept">ADP Dept</string>
    <string name="developed_for_e1">Developed for E1</string>
    <string name="uni_logo_des">University Logo Image</string>
    <string name="first_value_et_hint">Enter the first value here</string>
    <string name="second_value_et_hint">Enter the second value here</string>
    <string name="result_tv">Result:</string>
    <string name="do_the_magic">Do the magic</string>
    <string name="magic_tv_text">Start Magic Activity</string>
    <string name="lecture_78">Lecture 78</string>
    <string name="enter_your_name">Enter your name here</string>
    <string name="enter_your_email">Enter your email here</string>
    <string name="check_name_btn">Check Name</string>
    <string name="lecture_78_a">Lecture 7 8 a</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lecture_1011">Lecture 10 11</string>
</resources>