<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_tv"
        android:text="@string/uni_title"
        android:textSize="25sp"
        android:gravity="center"
        android:padding="10dp"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/logo_iv"
        android:src="@drawable/ucp"
        android:layout_centerInParent="true"
        android:layout_below="@id/title_tv"
        android:contentDescription="@string/uni_logo_des"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inner_ll"
        android:layout_below="@id/logo_iv"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cs_btn"
            android:text="@string/cs_dept"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/se_btn"
            android:text="@string/se_dept"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/adp_btn"
            android:text="@string/adp_dept"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/footer_tv"
        android:text="@string/developed_for_e1"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>












